@@ -1,6 +1,7 @@
 ^.*\.Rproj$
 ^\.Rproj\.user$
 ^notes.txt
-^\.travis.yml
+^\.travis.yml$
 ^tests/.*\.Rout.save
 ^local
+^\.codecov\.yml$
