@@ -21,11 +21,15 @@ script:
 after_failure:
   - ./run.sh dump_logs
 
+after_success:
+   # r-cran-covr is available in the Rutter PPAs we know about
+   - ./run.sh install_aptget r-cran-covr        
+   - R -e 'covr::codecov()'
+   
 notifications:
   email:
     on_success: change
     on_failure: change
 
     
-
 
